<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHomeActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_admin_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="313dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.2">

        <Button
            android:id="@+id/mangeBarberBtn"
            android:layout_width="378dp"
            android:layout_height="73dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttons"
            android:padding="20dp"
            android:text="@string/ManageBarber"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/mangeServicesBtn"
            android:layout_width="378dp"
            android:layout_height="73dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttons"
            android:padding="20dp"
            android:text="@string/ManageServices"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/mangeScheduleBtn"
            android:layout_width="378dp"
            android:layout_height="73dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttons"
            android:padding="20dp"
            android:text="@string/ManageSchedule"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>