<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".serviceActivity">

    <Spinner
        android:id="@+id/spinnerBarberName"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="?android:attr/colorBackground"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtViewBarderLbl"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitle" />

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/txtViewTitleOfService"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerBarberServices"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="?android:attr/detailsElementBackground"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toEndOf="@+id/txtViewServiceLbl"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBarberName" />

    <EditText
        android:id="@+id/editTextDateSelect"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="52dp"
        android:background="?android:attr/colorBackground"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBarberServices" />

    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/btnSelectDate"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextDateSelect"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBarberServices" />


    <Button
        android:id="@+id/btnSelectTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginLeft="169dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/btnSelectTime"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spinnerShift"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectDate"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/btnSubmitBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/btnSubmitBooking"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectTime" />

    <Button
        android:id="@+id/btnAddService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/btnAddService"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toEndOf="@+id/btnLogout"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectTime" />


    <Spinner
        android:id="@+id/spinnerShift"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="?android:attr/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateSelect"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="92dp"
        android:layout_height="52dp"
        android:background="@color/cardview_dark_background"
        android:selectAllOnFocus="false"
        android:text="@string/btnLogout"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerShift"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/txtViewBarderLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="50dp"
        android:text="@string/txtViewBarberLbl"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitle" />

    <TextView
        android:id="@+id/txtViewServiceLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="75dp"
        android:text="@string/txtViewServiceLbl"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewBarderLbl" />
</androidx.constraintlayout.widget.ConstraintLayout>